feat: reponsive grid layout for projects

--- a/portfolio.html
+++ b/portfolio.html
@@ -64,7 +64,212 @@
     </section>
     <section class="projects">
       <h2>Mis proyectos</h2>
-      <div class="projects">
+      <div class="projects--layout">
+        <div class="project">
+          <img
+            class="project__img"
+            src="assets/images/projects/forkify.png"
+            alt=""
+          />
+          <div class="project__content">
+            <ul class="project__content__techs">
+              <li class="tech">
+                <img src="./assets/images/skills/html.svg" alt="html" />
+              </li>
+              <li class="tech">
+                <img src="./assets/images/skills/css.svg" alt="css" />
+              </li>
+              <li class="tech">
+                <img src="./assets/images/skills/js.svg" alt="javascript" />
+              </li>
+            </ul>
+            <h2 class="project__content__title">Forkify</h2>
+            <p class="project__content__description">
+              Web APP en la que puedes buscar recetas y guardar tus favoritas.
+              Las recetas se obtienen llamando a una API externa.",
+            </p>
+          </div>
+          <div class="project__links">
+            <a
+              class="btn"
+              href="https://github.com/jadr-dev/Forkify"
+              target="_blank"
+              rel="noopener noreferrer"
+              >Github</a
+            >
+            <a
+              class="btn"
+              href="https://jadr-dev.github.io/Forkify/"
+              target="_blank"
+              rel="noopener noreferrer"
+              >Live</a
+            >
+          </div>
+        </div>
+        <div class="project">
+          <img
+            class="project__img"
+            src="assets/images/projects/forkify.png"
+            alt=""
+          />
+          <div class="project__content">
+            <ul class="project__content__techs">
+              <li class="tech">
+                <img src="./assets/images/skills/html.svg" alt="html" />
+              </li>
+              <li class="tech">
+                <img src="./assets/images/skills/css.svg" alt="css" />
+              </li>
+              <li class="tech">
+                <img src="./assets/images/skills/js.svg" alt="javascript" />
+              </li>
+            </ul>
+            <h2 class="project__content__title">Forkify</h2>
+            <p class="project__content__description">
+              Web APP en la que puedes buscar recetas y guardar tus favoritas.
+              Las recetas se obtienen llamando a una API externa.",
+            </p>
+          </div>
+          <div class="project__links">
+            <a
+              class="btn"
+              href="https://github.com/jadr-dev/Forkify"
+              target="_blank"
+              rel="noopener noreferrer"
+              >Github</a
+            >
+            <a
+              class="btn"
+              href="https://jadr-dev.github.io/Forkify/"
+              target="_blank"
+              rel="noopener noreferrer"
+              >Live</a
+            >
+          </div>
+        </div>
+        <div class="project">
+          <img
+            class="project__img"
+            src="assets/images/projects/forkify.png"
+            alt=""
+          />
+          <div class="project__content">
+            <ul class="project__content__techs">
+              <li class="tech">
+                <img src="./assets/images/skills/html.svg" alt="html" />
+              </li>
+              <li class="tech">
+                <img src="./assets/images/skills/css.svg" alt="css" />
+              </li>
+              <li class="tech">
+                <img src="./assets/images/skills/js.svg" alt="javascript" />
+              </li>
+            </ul>
+            <h2 class="project__content__title">Forkify</h2>
+            <p class="project__content__description">
+              Web APP en la que puedes buscar recetas y guardar tus favoritas.
+              Las recetas se obtienen llamando a una API externa.",
+            </p>
+          </div>
+          <div class="project__links">
+            <a
+              class="btn"
+              href="https://github.com/jadr-dev/Forkify"
+              target="_blank"
+              rel="noopener noreferrer"
+              >Github</a
+            >
+            <a
+              class="btn"
+              href="https://jadr-dev.github.io/Forkify/"
+              target="_blank"
+              rel="noopener noreferrer"
+              >Live</a
+            >
+          </div>
+        </div>
+        <div class="project">
+          <img
+            class="project__img"
+            src="assets/images/projects/forkify.png"
+            alt=""
+          />
+          <div class="project__content">
+            <ul class="project__content__techs">
+              <li class="tech">
+                <img src="./assets/images/skills/html.svg" alt="html" />
+              </li>
+              <li class="tech">
+                <img src="./assets/images/skills/css.svg" alt="css" />
+              </li>
+              <li class="tech">
+                <img src="./assets/images/skills/js.svg" alt="javascript" />
+              </li>
+            </ul>
+            <h2 class="project__content__title">Forkify</h2>
+            <p class="project__content__description">
+              Web APP en la que puedes buscar recetas y guardar tus favoritas.
+              Las recetas se obtienen llamando a una API externa.",
+            </p>
+          </div>
+          <div class="project__links">
+            <a
+              class="btn"
+              href="https://github.com/jadr-dev/Forkify"
+              target="_blank"
+              rel="noopener noreferrer"
+              >Github</a
+            >
+            <a
+              class="btn"
+              href="https://jadr-dev.github.io/Forkify/"
+              target="_blank"
+              rel="noopener noreferrer"
+              >Live</a
+            >
+          </div>
+        </div>
+        <div class="project">
+          <img
+            class="project__img"
+            src="assets/images/projects/forkify.png"
+            alt=""
+          />
+          <div class="project__content">
+            <ul class="project__content__techs">
+              <li class="tech">
+                <img src="./assets/images/skills/html.svg" alt="html" />
+              </li>
+              <li class="tech">
+                <img src="./assets/images/skills/css.svg" alt="css" />
+              </li>
+              <li class="tech">
+                <img src="./assets/images/skills/js.svg" alt="javascript" />
+              </li>
+            </ul>
+            <h2 class="project__content__title">Forkify</h2>
+            <p class="project__content__description">
+              Web APP en la que puedes buscar recetas y guardar tus favoritas.
+              Las recetas se obtienen llamando a una API externa.",
+            </p>
+          </div>
+          <div class="project__links">
+            <a
+              class="btn"
+              href="https://github.com/jadr-dev/Forkify"
+              target="_blank"
+              rel="noopener noreferrer"
+              >Github</a
+            >
+            <a
+              class="btn"
+              href="https://jadr-dev.github.io/Forkify/"
+              target="_blank"
+              rel="noopener noreferrer"
+              >Live</a
+            >
+          </div>
+        </div>
         <div class="project">
           <img
             class="project__img"
