--- a/portfolio.html
+++ b/portfolio.html
@@ -22,27 +22,29 @@
     <header class="header bg--gradient">
       <div class="header__items">
         <div class="header__logo">
-          <a href="#"><img src="./assets/svg/logo.svg" alt="logo" /></a>
+          <a href="/index.html"
+            ><img src="./assets/svg/logo.svg" alt="logo"
+          /></a>
         </div>
         <nav class="header__nav">
           <ul class="header__nav__list">
             <li class="header__nav__list__item hover-underline-animation">
-              <a href="#">Menu</a>
+              <a href="/index.html">Menu</a>
             </li>
             <li
               class="header__nav__list__item hover-underline-animation hidden--item"
             >
-              <a href="#top">Inicio</a>
+              <a href="#">Inicio</a>
             </li>
             <li
               class="header__nav__list__item hover-underline-animation hidden--item"
             >
-              <a href="#skills">Skills</a>
+              <a href="/index.html#skills">Skills</a>
             </li>
             <li
               class="header__nav__list__item hover-underline-animation hidden--item"
             >
-              <a href="#contact">Contacto</a>
+              <a href="/index.html#contact">Contacto</a>
             </li>
             <li
               class="header__nav__list__item hover-underline-animation hidden--item"
