fix: fix some errors in html

--- a/index.html
+++ b/index.html
@@ -166,19 +166,18 @@
             type="tel"
             name="phone"
             id="phone"
-            min="0"
             pattern="[0-9]{9}"
             placeholder="Tu teléfono (666666666)"
             required
           />
         </div>
         <div class="form__element">
-          <label class="form__label" for="github">Tag Github</label>
+          <label class="form__label" for="github-tag">Tag Github</label>
           <input
             class="form__input"
             type="text"
             name="github"
-            id="github"
+            id="github-tag"
             pattern="^@[^/s]"
             placeholder="Formato @<username>"
           />
@@ -213,7 +212,7 @@
             />
           </div>
           <div>
-            <label class="form__label--radio" for="schooll">Colegio</label>
+            <label class="form__label--radio" for="school">Colegio</label>
             <input
               class="form__input"
               type="radio"
