--- a/portfolio.html
+++ b/portfolio.html
@@ -57,7 +57,7 @@
     </header>
     <section class="video">
       <iframe
-        src="https://www.youtube.com/embed/APdaR3Dl9Ho"
+        src="https://www.youtube.com/embed/APdaR3Dl9Ho?autoplay=1"
         title="YouTube video player"
         frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
