feat: add 5 projects to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -70,7 +70,178 @@
         <div class="project">
           <img
             class="project__img"
-            src="assets/images/projects/forkify.png"
+            src="assets/images/projects/jsquiz.png"
+            alt=""
+          />
+          <div class="project__content">
+            <ul class="project__content__techs">
+              <li class="tech">
+                <img src="./assets/images/skills/html.svg" alt="html" />
+              </li>
+              <li class="tech">
+                <img src="./assets/images/skills/css.svg" alt="css" />
+              </li>
+              <li class="tech">
+                <img src="./assets/images/skills/js.svg" alt="javascript" />
+              </li>
+              <li class="tech">
+                <img src="./assets/images/skills/react.svg" alt="react" />
+              </li>
+            </ul>
+            <h2 class="project__content__title">JSQuiz</h2>
+            <p class="project__content__description">
+              React Web APP que permite a los usuarios responder preguntas y
+              realiza un seguimiento de su puntuación.
+            </p>
+          </div>
+          <div class="project__links">
+            <a
+              class="btn"
+              href="https://github.com/JoseAlbDR/js-quiz"
+              target="_blank"
+              rel="noopener noreferrer"
+              >Github</a
+            >
+            <a
+              class="btn"
+              href="jsquiz.jadelgadorobles.com"
+              target="_blank"
+              rel="noopener noreferrer"
+              >Live</a
+            >
+          </div>
+        </div>
+        <div class="project">
+          <img
+            class="project__img"
+            src="assets/images/projects/WorldWise.png"
+            alt=""
+          />
+          <div class="project__content">
+            <ul class="project__content__techs">
+              <li class="tech">
+                <img src="./assets/images/skills/html.svg" alt="html" />
+              </li>
+              <li class="tech">
+                <img src="./assets/images/skills/css.svg" alt="css" />
+              </li>
+              <li class="tech">
+                <img src="./assets/images/skills/js.svg" alt="javascript" />
+              </li>
+              <li class="tech">
+                <img src="./assets/images/skills/react.svg" alt="react" />
+              </li>
+            </ul>
+            <h2 class="project__content__title">WorldWise</h2>
+            <p class="project__content__description">
+              React Web APP que te permite hacer un seguimiento de las ciudades
+              que has visitado alrededor del mundo.
+            </p>
+          </div>
+          <div class="project__links">
+            <a
+              class="btn"
+              href="https://github.com/JoseAlbDR/worldwise"
+              target="_blank"
+              rel="noopener noreferrer"
+              >Github</a
+            >
+            <a
+              class="btn"
+              href="jadr-worldwide.netlify.app"
+              target="_blank"
+              rel="noopener noreferrer"
+              >Live</a
+            >
+          </div>
+        </div>
+        <div class="project">
+          <img
+            class="project__img"
+            src="assets/images/projects/jsquizapi.png"
+            alt=""
+          />
+          <div class="project__content">
+            <ul class="project__content__techs">
+              <li class="tech">
+                <img src="./assets/images/skills/js.svg" alt="javascript" />
+              </li>
+              <li class="tech">
+                <img src="./assets/images/skills/node.svg" alt="javascript" />
+              </li>
+            </ul>
+            <h2 class="project__content__title">API JsQuiz</h2>
+            <p class="project__content__description">
+              Rest API desarollada con Node y Express para hacer operaciones
+              CRUD sobre una base de datos de preguntas de JavaScript.
+            </p>
+          </div>
+          <div class="project__links">
+            <a
+              class="btn"
+              href="https://github.com/JoseAlbDR/js-quiz-Api"
+              target="_blank"
+              rel="noopener noreferrer"
+              >Github</a
+            >
+            <a
+              class="btn"
+              href="jsquiz.jadero.dev/api/v1/questions"
+              target="_blank"
+              rel="noopener noreferrer"
+              >Live</a
+            >
+          </div>
+        </div>
+        <div class="project">
+          <img
+            class="project__img"
+            src="assets/images/projects/usepopcorn.png"
+            alt=""
+          />
+          <div class="project__content">
+            <ul class="project__content__techs">
+              <li class="tech">
+                <img src="./assets/images/skills/html.svg" alt="html" />
+              </li>
+              <li class="tech">
+                <img src="./assets/images/skills/css.svg" alt="css" />
+              </li>
+              <li class="tech">
+                <img src="./assets/images/skills/js.svg" alt="javascript" />
+              </li>
+              <li class="tech">
+                <img src="./assets/images/skills/react.svg" alt="javascript" />
+              </li>
+            </ul>
+            <h2 class="project__content__title">UsePopCorn</h2>
+            <p class="project__content__description">
+              Web APP en la que puedes buscar peliculas y guardarlas
+              asignándoles un rating, muestra estadisticas sobre todas las
+              peliculas guardadas.
+            </p>
+          </div>
+          <div class="project__links">
+            <a
+              class="btn"
+              href="https://github.com/jadr-dev/Forkify"
+              target="_blank"
+              rel="noopener noreferrer"
+              >Github</a
+            >
+            <a
+              class="btn"
+              href="https://jadr-dev.github.io/Forkify/"
+              target="_blank"
+              rel="noopener noreferrer"
+              >Live</a
+            >
+          </div>
+        </div>
+        <div class="project">
+          <img
+            class="project__img"
+            src="assets/images/projects/simon.png"
             alt=""
           />
           <div class="project__content">
@@ -87,21 +258,21 @@
             </ul>
             <h2 class="project__content__title">Forkify</h2>
             <p class="project__content__description">
-              Web APP en la que puedes buscar recetas y guardar tus favoritas.
-              Las recetas se obtienen llamando a una API externa.",
+              Clásico juego del Simon donde tienes que repetir un patron de
+              colores y sonidos. Guarda la máxima puntuación y los usuarios.
             </p>
           </div>
           <div class="project__links">
             <a
               class="btn"
-              href="https://github.com/jadr-dev/Forkify"
+              href="https://github.com/JoseAlbDR/simongame"
               target="_blank"
               rel="noopener noreferrer"
               >Github</a
             >
             <a
               class="btn"
-              href="https://jadr-dev.github.io/Forkify/"
+              href="jadr-simon.netlify.app"
               target="_blank"
               rel="noopener noreferrer"
               >Live</a
@@ -129,184 +300,20 @@
             <h2 class="project__content__title">Forkify</h2>
             <p class="project__content__description">
               Web APP en la que puedes buscar recetas y guardar tus favoritas.
-              Las recetas se obtienen llamando a una API externa.",
+              Las recetas se obtienen llamando a una API externa.
             </p>
           </div>
           <div class="project__links">
             <a
               class="btn"
-              href="https://github.com/jadr-dev/Forkify"
+              href="https://github.com/JoseAlbDR/forkify"
               target="_blank"
               rel="noopener noreferrer"
               >Github</a
             >
             <a
               class="btn"
-              href="https://jadr-dev.github.io/Forkify/"
-              target="_blank"
-              rel="noopener noreferrer"
-              >Live</a
-            >
-          </div>
-        </div>
-        <div class="project">
-          <img
-            class="project__img"
-            src="assets/images/projects/forkify.png"
-            alt=""
-          />
-          <div class="project__content">
-            <ul class="project__content__techs">
-              <li class="tech">
-                <img src="./assets/images/skills/html.svg" alt="html" />
-              </li>
-              <li class="tech">
-                <img src="./assets/images/skills/css.svg" alt="css" />
-              </li>
-              <li class="tech">
-                <img src="./assets/images/skills/js.svg" alt="javascript" />
-              </li>
-            </ul>
-            <h2 class="project__content__title">Forkify</h2>
-            <p class="project__content__description">
-              Web APP en la que puedes buscar recetas y guardar tus favoritas.
-              Las recetas se obtienen llamando a una API externa.",
-            </p>
-          </div>
-          <div class="project__links">
-            <a
-              class="btn"
-              href="https://github.com/jadr-dev/Forkify"
-              target="_blank"
-              rel="noopener noreferrer"
-              >Github</a
-            >
-            <a
-              class="btn"
-              href="https://jadr-dev.github.io/Forkify/"
-              target="_blank"
-              rel="noopener noreferrer"
-              >Live</a
-            >
-          </div>
-        </div>
-        <div class="project">
-          <img
-            class="project__img"
-            src="assets/images/projects/forkify.png"
-            alt=""
-          />
-          <div class="project__content">
-            <ul class="project__content__techs">
-              <li class="tech">
-                <img src="./assets/images/skills/html.svg" alt="html" />
-              </li>
-              <li class="tech">
-                <img src="./assets/images/skills/css.svg" alt="css" />
-              </li>
-              <li class="tech">
-                <img src="./assets/images/skills/js.svg" alt="javascript" />
-              </li>
-            </ul>
-            <h2 class="project__content__title">Forkify</h2>
-            <p class="project__content__description">
-              Web APP en la que puedes buscar recetas y guardar tus favoritas.
-              Las recetas se obtienen llamando a una API externa.",
-            </p>
-          </div>
-          <div class="project__links">
-            <a
-              class="btn"
-              href="https://github.com/jadr-dev/Forkify"
-              target="_blank"
-              rel="noopener noreferrer"
-              >Github</a
-            >
-            <a
-              class="btn"
-              href="https://jadr-dev.github.io/Forkify/"
-              target="_blank"
-              rel="noopener noreferrer"
-              >Live</a
-            >
-          </div>
-        </div>
-        <div class="project">
-          <img
-            class="project__img"
-            src="assets/images/projects/forkify.png"
-            alt=""
-          />
-          <div class="project__content">
-            <ul class="project__content__techs">
-              <li class="tech">
-                <img src="./assets/images/skills/html.svg" alt="html" />
-              </li>
-              <li class="tech">
-                <img src="./assets/images/skills/css.svg" alt="css" />
-              </li>
-              <li class="tech">
-                <img src="./assets/images/skills/js.svg" alt="javascript" />
-              </li>
-            </ul>
-            <h2 class="project__content__title">Forkify</h2>
-            <p class="project__content__description">
-              Web APP en la que puedes buscar recetas y guardar tus favoritas.
-              Las recetas se obtienen llamando a una API externa.",
-            </p>
-          </div>
-          <div class="project__links">
-            <a
-              class="btn"
-              href="https://github.com/jadr-dev/Forkify"
-              target="_blank"
-              rel="noopener noreferrer"
-              >Github</a
-            >
-            <a
-              class="btn"
-              href="https://jadr-dev.github.io/Forkify/"
-              target="_blank"
-              rel="noopener noreferrer"
-              >Live</a
-            >
-          </div>
-        </div>
-        <div class="project">
-          <img
-            class="project__img"
-            src="assets/images/projects/forkify.png"
-            alt=""
-          />
-          <div class="project__content">
-            <ul class="project__content__techs">
-              <li class="tech">
-                <img src="./assets/images/skills/html.svg" alt="html" />
-              </li>
-              <li class="tech">
-                <img src="./assets/images/skills/css.svg" alt="css" />
-              </li>
-              <li class="tech">
-                <img src="./assets/images/skills/js.svg" alt="javascript" />
-              </li>
-            </ul>
-            <h2 class="project__content__title">Forkify</h2>
-            <p class="project__content__description">
-              Web APP en la que puedes buscar recetas y guardar tus favoritas.
-              Las recetas se obtienen llamando a una API externa.",
-            </p>
-          </div>
-          <div class="project__links">
-            <a
-              class="btn"
-              href="https://github.com/jadr-dev/Forkify"
-              target="_blank"
-              rel="noopener noreferrer"
-              >Github</a
-            >
-            <a
-              class="btn"
-              href="https://jadr-dev.github.io/Forkify/"
+              href="forkify-jadr.netlify.app"
               target="_blank"
               rel="noopener noreferrer"
               >Live</a
