--- a/portfolio.html
+++ b/portfolio.html
@@ -49,7 +49,7 @@
             <li
               class="header__nav__list__item hover-underline-animation hidden--item"
             >
-              <a href="./portfolio.html">Portfolio</a>
+              <a href="#projects">Proyectos</a>
             </li>
           </ul>
         </nav>
@@ -64,7 +64,7 @@
         allowfullscreen
       ></iframe>
     </section>
-    <section class="projects">
+    <section class="projects" id="projects">
       <h2>Mis proyectos</h2>
       <div class="projects--layout">
         <div class="project">
