feat: add a button in 404.html and change h1 and p font-size

--- a/404.html
+++ b/404.html
@@ -41,8 +41,14 @@
     </header>
     <section class="error-page" variant="top-background">
       <div class="not-found">
-        <h1>404 - PAGE NOT FOUND</h1>
-        <p>We’ve dispatched a rescue murloc to guide you back to safety.</p>
+        <h1>404 - PÁGINA NO ENCONTRADA</h1>
+        <p>
+          Hemos enviado un murloc de rescate para guiarte de regreso a un lugar
+          seguro.
+        </p>
+        <a href="/index.html">
+          <button class="btn">Mmmrrgmgrrrgmmll!</button>
+        </a>
       </div>
       <video
         class="background-video"
