fix: broken links in some projects

--- a/portfolio.html
+++ b/portfolio.html
@@ -104,7 +104,7 @@
             >
             <a
               class="btn"
-              href="jsquiz.jadelgadorobles.com"
+              href="https://jsquiz.jadelgadorobles.com"
               target="_blank"
               rel="noopener noreferrer"
               >Live</a
@@ -148,7 +148,7 @@
             >
             <a
               class="btn"
-              href="jadr-worldwide.netlify.app"
+              href="https://jadr-worldwide.netlify.app"
               target="_blank"
               rel="noopener noreferrer"
               >Live</a
@@ -186,7 +186,7 @@
             >
             <a
               class="btn"
-              href="jsquiz.jadero.dev/api/v1/questions"
+              href="https://jsquiz.jadero.dev/api/v1/questions"
               target="_blank"
               rel="noopener noreferrer"
               >Live</a
@@ -224,14 +224,14 @@
           <div class="project__links">
             <a
               class="btn"
-              href="https://github.com/jadr-dev/Forkify"
+              href="https://github.com/JoseAlbDR/forkify"
               target="_blank"
               rel="noopener noreferrer"
               >Github</a
             >
             <a
               class="btn"
-              href="https://jadr-dev.github.io/Forkify/"
+              href="https://forkify-jadr.netlify.app/"
               target="_blank"
               rel="noopener noreferrer"
               >Live</a
@@ -256,7 +256,7 @@
                 <img src="./assets/images/skills/js.svg" alt="javascript" />
               </li>
             </ul>
-            <h2 class="project__content__title">Forkify</h2>
+            <h2 class="project__content__title">Simon</h2>
             <p class="project__content__description">
               Clásico juego del Simon donde tienes que repetir un patron de
               colores y sonidos. Guarda la máxima puntuación y los usuarios.
@@ -272,7 +272,7 @@
             >
             <a
               class="btn"
-              href="jadr-simon.netlify.app"
+              href="https://jadr-simon.netlify.app"
               target="_blank"
               rel="noopener noreferrer"
               >Live</a
@@ -313,7 +313,7 @@
             >
             <a
               class="btn"
-              href="forkify-jadr.netlify.app"
+              href="https://forkify-jadr.netlify.app"
               target="_blank"
               rel="noopener noreferrer"
               >Live</a
