--- a/404.html
+++ b/404.html
@@ -72,8 +72,18 @@
       <div class="container">
         <div class="footer__social">
           <ul class="footer__social__icons">
-            <li><img src="./assets/icons/linkedin.svg" alt="linkedin" /></li>
-            <li><img src="./assets/icons/github.svg" alt="github" /></li>
+            <li>
+              <a
+                href="https://www.linkedin.com/in/jalbertodelgado"
+                target="_blank"
+                ><img src="./assets/icons/linkedin.svg" alt="linkedin"
+              /></a>
+            </li>
+            <li>
+              <a href="https://github.com/JoseAlbDR" target="_blank"
+                ><img src="./assets/icons/github.svg" alt="github"
+              /></a>
+            </li>
           </ul>
         </div>
         <div class="footer__copy">
