feat: new class to add marging to radio buttons

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
         </div>
         <div class="form__element known">
           <label class="form__label">¿Dónde me conociste?</label>
-          <div>
+          <div class="form--radio">
             <input
               class="form__input"
               type="radio"
@@ -198,7 +198,7 @@
               >Universidad</label
             >
           </div>
-          <div>
+          <div class="form--radio">
             <input
               class="form__input"
               type="radio"
@@ -211,7 +211,7 @@
               >Keepcoding kick-off</label
             >
           </div>
-          <div>
+          <div class="form--radio">
             <input
               class="form__input"
               type="radio"
@@ -222,7 +222,7 @@
             />
             <label class="form__label--radio" for="school">Colegio</label>
           </div>
-          <div>
+          <div class="form--radio">
             <input
               class="form__input"
               type="radio"
