--- a/index.html
+++ b/index.html
@@ -12,9 +12,27 @@
     />
     <link
       rel="icon"
-      type="image/png"
+      type="image/ico"
+      sizes="16x16"
+      href="./assets/icons/faviconV2.ico"
+    />
+    <link
+      rel="icon"
+      type="image/ico"
       sizes="32x32"
-      href="./assets/icons/favicon.png"
+      href="./assets/icons/faviconV2.ico"
+    />
+    <link
+      rel="icon"
+      type="image/ico"
+      sizes="48x48"
+      href="./assets/icons/faviconV2.ico"
+    />
+    <link
+      rel="icon"
+      type="image/ico"
+      sizes="64x64"
+      href="./assets/icons/faviconV2.ico"
     />
     <title>Portfolio JADR</title>
     <link rel="stylesheet" href="styles/normalize.css" />
