fix: remove redundant link to icon

--- a/404.html
+++ b/404.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/x-icon" href="/assets/svg/logo.svg" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -14,25 +13,25 @@
       rel="icon"
       type="image/ico"
       sizes="16x16"
-      href="./assets/icons/faviconV2.ico"
+      href="/assets/icons/faviconV2.ico"
     />
     <link
       rel="icon"
       type="image/ico"
       sizes="32x32"
-      href="./assets/icons/faviconV2.ico"
+      href="/assets/icons/faviconV2.ico"
     />
     <link
       rel="icon"
       type="image/ico"
       sizes="48x48"
-      href="./assets/icons/faviconV2.ico"
+      href="/assets/icons/faviconV2.ico"
     />
     <link
       rel="icon"
       type="image/ico"
       sizes="64x64"
-      href="./assets/icons/faviconV2.ico"
+      href="/assets/icons/faviconV2.ico"
     />
     <title>Portfolio JADR</title>
     <link rel="stylesheet" href="styles/normalize.css" />
