feat: add content url to meta image

--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta property="og:title" content="jadero.dev" />
     <meta property="og:description" content=" J.Alberto Delgado Portfolio" />
-    <meta property="og:image" content="" />
+    <meta
+      property="og:image"
+      content="https://www.jadero.dev/assets/svg/background-logo.svg"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
