feat: change meta image

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta property="og:description" content=" J.Alberto Delgado Portfolio" />
     <meta
       property="og:image"
-      content="https://www.jadero.dev/assets/svg/background-logo.svg"
+      content="https://www.jadero.dev/assets/images/background-logo.png"
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
