style: change header height, header logo width, footer height and banner margin-top

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
       </div>
     </section>
     <section id="contact" class="container">
-      <form class="form bg--gradient" method="post" action="/">
+      <form class="form" method="post" action="/">
         <div class="form__element">
           <label class="form__label" for="name">Nombre</label>
           <input
