--- a/portfolio.html
+++ b/portfolio.html
@@ -79,13 +79,13 @@
       </div>
     </header>
     <section class="video">
-      <iframe
-        src="https://www.youtube.com/embed/APdaR3Dl9Ho?autoplay=1"
-        title="YouTube video player"
-        frameborder="0"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-        allowfullscreen
-      ></iframe>
+      <video
+        src="./assets/videos/portfolio.mp4"
+        muted
+        loop
+        autoplay
+        controls
+      ></video>
     </section>
     <section class="projects" id="projects">
       <h2>Mis proyectos</h2>
