feat: add Docs button to API JSQUIZ project

--- a/portfolio.html
+++ b/portfolio.html
@@ -214,6 +214,13 @@
               rel="noopener noreferrer"
               >Live</a
             >
+            <a
+              class="btn"
+              href="https://jsquiz.jadero.dev/api/v1/docs"
+              target="_blank"
+              rel="noopener noreferrer"
+              >Docs</a
+            >
           </div>
         </div>
         <div class="project">
