feat: change background

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <link rel="stylesheet" href="styles/form.css" />
     <link rel="stylesheet" href="styles/footer.css" />
   </head>
-  <body class="bg--animation" id="top">
+  <body id="top">
     <header class="header bg--gradient">
       <div class="header__items">
         <div class="header__logo">
