feat: updated menu items in all html pages

--- a/index.html
+++ b/index.html
@@ -70,6 +70,11 @@
             <li
               class="header__nav__list__item hover-underline-animation hidden--item"
             >
+              <a href="#about">About</a>
+            </li>
+            <li
+              class="header__nav__list__item hover-underline-animation hidden--item"
+            >
               <a href="#skills">Skills</a>
             </li>
             <li
