--- a/404.html
+++ b/404.html
@@ -56,7 +56,27 @@
             <li
               class="header__nav__list__item hover-underline-animation hidden--item"
             >
-              <a href="#top">Inicio</a>
+              <a href="#">Inicio</a>
+            </li>
+            <li
+              class="header__nav__list__item hover-underline-animation hidden--item"
+            >
+              <a href="/index.html#about">About</a>
+            </li>
+            <li
+              class="header__nav__list__item hover-underline-animation hidden--item"
+            >
+              <a href="/index.html#skills">Skills</a>
+            </li>
+            <li
+              class="header__nav__list__item hover-underline-animation hidden--item"
+            >
+              <a href="/index.html#contact">Contacto</a>
+            </li>
+            <li
+              class="header__nav__list__item hover-underline-animation hidden--item"
+            >
+              <a href="#projects">Proyectos</a>
             </li>
           </ul>
         </nav>
