--- a/portfolio.html
+++ b/portfolio.html
@@ -62,6 +62,11 @@
             <li
               class="header__nav__list__item hover-underline-animation hidden--item"
             >
+              <a href="/index.html#about">About</a>
+            </li>
+            <li
+              class="header__nav__list__item hover-underline-animation hidden--item"
+            >
               <a href="/index.html#skills">Skills</a>
             </li>
             <li
