style: minor style changes and fixes

--- a/404.html
+++ b/404.html
@@ -76,7 +76,7 @@
             <li
               class="header__nav__list__item hover-underline-animation hidden--item"
             >
-              <a href="#projects">Proyectos</a>
+              <a href="/portfolio.html">Portfolio</a>
             </li>
           </ul>
         </nav>
