--- a/index.html
+++ b/index.html
@@ -51,45 +51,52 @@
   </head>
   <body class="bg--animation" id="top">
     <header class="header bg--gradient">
-      <div class="header__items">
+      <!-- <div class="top-nav header__items">
         <div class="header__logo">
           <a href="/index.html"
             ><img src="./assets/svg/logo.svg" alt="logo"
           /></a>
         </div>
+        <input id="menu-toggle" type="checkbox" />
+        <label class='menu-button-container' for="menu-toggle">
+        <div class='menu-button'></div>
         <nav class="header__nav">
           <ul class="header__nav__list">
             <li class="header__nav__list__item hover-underline-animation">
               <a href="/index.html">Menu</a>
             </li>
-            <li
-              class="header__nav__list__item hover-underline-animation hidden--item"
-            >
+            <li class="header__nav__list__item hover-underline-animation">
               <a href="#">Inicio</a>
             </li>
-            <li
-              class="header__nav__list__item hover-underline-animation hidden--item"
-            >
+            <li class="header__nav__list__item hover-underline-animation">
               <a href="#about">About</a>
             </li>
-            <li
-              class="header__nav__list__item hover-underline-animation hidden--item"
-            >
+            <li class="header__nav__list__item hover-underline-animation">
               <a href="#skills">Skills</a>
             </li>
-            <li
-              class="header__nav__list__item hover-underline-animation hidden--item"
-            >
+            <li class="header__nav__list__item hover-underline-animation">
               <a href="#contact">Contacto</a>
             </li>
-            <li
-              class="header__nav__list__item hover-underline-animation hidden--item"
-            >
+            <li class="header__nav__list__item hover-underline-animation">
               <a href="./portfolio.html">Portfolio</a>
             </li>
           </ul>
         </nav>
-      </div>
+      </div> -->
+      <nav class="top-nav">
+        <div>Logo Here</div>
+        <input id="menu-toggle" type="checkbox" />
+        <label class="menu-button-container" for="menu-toggle">
+          <div class="menu-button"></div>
+        </label>
+        <ul class="menu">
+          <li>One</li>
+          <li>Two</li>
+          <li>Three</li>
+          <li>Four</li>
+          <li>Five</li>
+        </ul>
+      </nav>
     </header>
     <section class="banner">
       <div class="bg--fixed"></div>
