--- a/index.html
+++ b/index.html
@@ -51,50 +51,32 @@
   </head>
   <body class="bg--animation" id="top">
     <header class="header bg--gradient">
-      <!-- <div class="top-nav header__items">
-        <div class="header__logo">
+      <nav class="header__nav">
+        <div class="header__nav__logo">
           <a href="/index.html"
             ><img src="./assets/svg/logo.svg" alt="logo"
           /></a>
         </div>
-        <input id="menu-toggle" type="checkbox" />
-        <label class='menu-button-container' for="menu-toggle">
-        <div class='menu-button'></div>
-        <nav class="header__nav">
-          <ul class="header__nav__list">
-            <li class="header__nav__list__item hover-underline-animation">
-              <a href="/index.html">Menu</a>
-            </li>
-            <li class="header__nav__list__item hover-underline-animation">
-              <a href="#">Inicio</a>
-            </li>
-            <li class="header__nav__list__item hover-underline-animation">
-              <a href="#about">About</a>
-            </li>
-            <li class="header__nav__list__item hover-underline-animation">
-              <a href="#skills">Skills</a>
-            </li>
-            <li class="header__nav__list__item hover-underline-animation">
-              <a href="#contact">Contacto</a>
-            </li>
-            <li class="header__nav__list__item hover-underline-animation">
-              <a href="./portfolio.html">Portfolio</a>
-            </li>
-          </ul>
-        </nav>
-      </div> -->
-      <nav class="top-nav">
-        <div>Logo Here</div>
-        <input id="menu-toggle" type="checkbox" />
-        <label class="menu-button-container" for="menu-toggle">
-          <div class="menu-button"></div>
+        <input id="header__nav--toggle" type="checkbox" />
+        <label class="header__nav--button--container" for="header__nav--toggle">
+          <div class="header__nav--button"></div>
         </label>
-        <ul class="menu">
-          <li>One</li>
-          <li>Two</li>
-          <li>Three</li>
-          <li>Four</li>
-          <li>Five</li>
+        <ul class="header__nav__list">
+          <li class="header__nav__list__item hover-underline-animation">
+            <a href="#">Inicio</a>
+          </li>
+          <li class="header__nav__list__item hover-underline-animation">
+            <a href="#about">About</a>
+          </li>
+          <li class="header__nav__list__item hover-underline-animation">
+            <a href="#skills">Skills</a>
+          </li>
+          <li class="header__nav__list__item hover-underline-animation">
+            <a href="#contact">Contacto</a>
+          </li>
+          <li class="header__nav__list__item hover-underline-animation">
+            <a href="./portfolio.html">Portfolio</a>
+          </li>
         </ul>
       </nav>
     </header>
