feat: add title to form section with margin and border bottom

--- a/index.html
+++ b/index.html
@@ -159,6 +159,7 @@
       </div>
     </section>
     <section id="contact" class="container">
+      <h2 class="contact__title">Contacta Conmigo</h2>
       <form class="form" method="post" action="/">
         <div class="form__element">
           <label class="form__label" for="name">Nombre</label>
