Add class for about title Change main colors Disable background animation, now body has a static gradient Move common h2 styles to common.css Adjust margins in h2

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <link rel="stylesheet" href="styles/form.css" />
     <link rel="stylesheet" href="styles/footer.css" />
   </head>
-  <body class="bg--animation" id="top">
+  <body class="bg--gradient" id="top">
     <header class="header bg--gradient">
       <nav class="header__nav">
         <div class="header__nav__logo">
@@ -88,7 +88,9 @@
     </section>
     <section id="about" class="about">
       <div class="about__content">
-        <h2>nunca es tarde para descubrir tu pasión</h2>
+        <h2 class="about__content__title">
+          nunca es tarde para descubrir tu pasión
+        </h2>
         <p>
           ¡Hola! Soy J. Alberto Delgado, un estudiante principiante de
           desarrollo web. Mi pasión es resolver problemas a través de la
