refactor: remove container from common styles, add specific container to some sections

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <link rel="stylesheet" href="styles/form.css" />
     <link rel="stylesheet" href="styles/footer.css" />
   </head>
-  <body class="bg--gradient" id="top">
+  <body class="bg--body" id="top">
     <header class="header bg--gradient">
       <nav class="header__nav">
         <div class="header__nav__logo">
@@ -160,7 +160,7 @@
         </ul>
       </div>
     </section>
-    <section id="contact" class="container">
+    <section id="contact" class="contact">
       <h2 class="contact__title">Contacta Conmigo</h2>
       <form class="form" method="post" action="/">
         <div class="form__element">
@@ -289,7 +289,7 @@
       </form>
     </section>
     <footer class="footer bg--gradient">
-      <div class="container">
+      <div class="footer--container">
         <div class="footer__social">
           <ul class="footer__social__icons">
             <li>
