--- a/404.html
+++ b/404.html
@@ -40,47 +40,36 @@
     <link rel="stylesheet" href="styles/footer.css" />
     <link rel="stylesheet" href="styles/404.css" />
   </head>
-  <body class="bg--animation" id="top">
+  <body class="bg--body" id="top">
     <header class="header bg--gradient">
-      <div class="header__items">
-        <div class="header__logo">
+      <nav class="header__nav">
+        <div class="header__nav__logo">
           <a href="/index.html"
             ><img src="./assets/svg/logo.svg" alt="logo"
           /></a>
         </div>
-        <nav class="header__nav">
-          <ul class="header__nav__list">
-            <li class="header__nav__list__item hover-underline-animation">
-              <a href="/index.html">Menu</a>
-            </li>
-            <li
-              class="header__nav__list__item hover-underline-animation hidden--item"
-            >
-              <a href="#">Inicio</a>
-            </li>
-            <li
-              class="header__nav__list__item hover-underline-animation hidden--item"
-            >
-              <a href="/index.html#about">About</a>
-            </li>
-            <li
-              class="header__nav__list__item hover-underline-animation hidden--item"
-            >
-              <a href="/index.html#skills">Skills</a>
-            </li>
-            <li
-              class="header__nav__list__item hover-underline-animation hidden--item"
-            >
-              <a href="/index.html#contact">Contacto</a>
-            </li>
-            <li
-              class="header__nav__list__item hover-underline-animation hidden--item"
-            >
-              <a href="/portfolio.html">Portfolio</a>
-            </li>
-          </ul>
-        </nav>
-      </div>
+        <input id="header__nav--toggle" type="checkbox" />
+        <label class="header__nav--button--container" for="header__nav--toggle">
+          <div class="header__nav--button"></div>
+        </label>
+        <ul class="header__nav__list">
+          <li class="header__nav__list__item hover-underline-animation">
+            <a href="#">Inicio</a>
+          </li>
+          <li class="header__nav__list__item hover-underline-animation">
+            <a href="#about">About</a>
+          </li>
+          <li class="header__nav__list__item hover-underline-animation">
+            <a href="#skills">Skills</a>
+          </li>
+          <li class="header__nav__list__item hover-underline-animation">
+            <a href="#contact">Contacto</a>
+          </li>
+          <li class="header__nav__list__item hover-underline-animation">
+            <a href="./portfolio.html">Portfolio</a>
+          </li>
+        </ul>
+      </nav>
     </header>
     <section class="error-page" variant="top-background">
       <div class="not-found">
@@ -112,7 +101,7 @@
       </video>
     </section>
     <footer class="footer bg--gradient">
-      <div class="container">
+      <div class="footer--container">
         <div class="footer__social">
           <ul class="footer__social__icons">
             <li>
