style: add comments to different sections, clean unused classes

--- a/404.html
+++ b/404.html
@@ -40,7 +40,8 @@
     <link rel="stylesheet" href="styles/footer.css" />
     <link rel="stylesheet" href="styles/404.css" />
   </head>
-  <body class="bg--body" id="top">
+  <body class="bg--body">
+    <!-- Navigation Menu -->
     <header class="header bg--gradient">
       <nav class="header__nav">
         <div class="header__nav__logo">
@@ -71,7 +72,10 @@
         </ul>
       </nav>
     </header>
-    <section class="error-page" variant="top-background">
+    <!-- End Navigation Menu -->
+
+    <!-- Error  -->
+    <section class="error-page">
       <div class="not-found">
         <h1>404 - PÁGINA NO ENCONTRADA</h1>
         <p>
@@ -100,6 +104,9 @@
         />
       </video>
     </section>
+    <!-- End Error  -->
+
+    <!-- Footer -->
     <footer class="footer bg--gradient">
       <div class="footer--container">
         <div class="footer__social">
@@ -123,5 +130,6 @@
         </div>
       </div>
     </footer>
+    <!-- End Footer -->
   </body>
 </html>
