--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
     <link rel="stylesheet" href="styles/form.css" />
     <link rel="stylesheet" href="styles/footer.css" />
   </head>
-  <body class="bg--body" id="top">
+  <body class="bg--body">
+    <!-- Navigation Menu -->
     <header class="header bg--gradient">
       <nav class="header__nav">
         <div class="header__nav__logo">
@@ -80,12 +81,18 @@
         </ul>
       </nav>
     </header>
+    <!-- End Navigation Menu -->
+
+    <!-- Banner -->
     <section class="banner">
       <div class="bg--fixed"></div>
       <div class="banner__info">
         <h1>Portfolio J.Alberto Delgado</h1>
       </div>
     </section>
+    <!-- End Banner -->
+
+    <!-- About -->
     <section id="about" class="about">
       <div class="about__content">
         <h2 class="about__content__title">
@@ -104,6 +111,9 @@
         <img src="./assets/images/main/about-img.jpg" alt="about img" />
       </div>
     </section>
+    <!-- End About -->
+
+    <!-- Skills -->
     <section id="skills" class="skills">
       <div class="bg--fixed"></div>
       <div class="skills__container">
@@ -160,6 +170,9 @@
         </ul>
       </div>
     </section>
+    <!-- End Skills -->
+
+    <!-- Contact -->
     <section id="contact" class="contact">
       <h2 class="contact__title">Contacta Conmigo</h2>
       <form class="form" method="post" action="/">
@@ -288,6 +301,9 @@
         </div>
       </form>
     </section>
+    <!-- End Contact -->
+
+    <!-- Footer -->
     <footer class="footer bg--gradient">
       <div class="footer--container">
         <div class="footer__social">
@@ -311,5 +327,6 @@
         </div>
       </div>
     </footer>
+    <!-- End Footer -->
   </body>
 </html>
