--- a/portfolio.html
+++ b/portfolio.html
@@ -41,7 +41,8 @@
     <link rel="stylesheet" href="styles/video.css" />
     <link rel="stylesheet" href="styles/projects.css" />
   </head>
-  <body class="bg--body" id="top">
+  <body class="bg--body">
+    <!-- Navigation Menu -->
     <header class="header bg--gradient">
       <nav class="header__nav">
         <div class="header__nav__logo">
@@ -72,6 +73,9 @@
         </ul>
       </nav>
     </header>
+    <!-- End Navigation Menu -->
+
+    <!-- Video -->
     <section class="video">
       <video
         src="./assets/videos/portfolio.mp4"
@@ -81,6 +85,9 @@
         controls
       ></video>
     </section>
+    <!-- End Video -->
+
+    <!-- Projects -->
     <section class="projects" id="projects">
       <h2>Mis proyectos</h2>
       <div class="projects--layout">
@@ -346,6 +353,9 @@
         </div>
       </div>
     </section>
+    <!-- End Projects -->
+
+    <!-- Footer -->
     <footer class="footer bg--gradient">
       <div class="footer--container">
         <div class="footer__social">
@@ -369,5 +379,6 @@
         </div>
       </div>
     </footer>
+    <!-- End Footer -->
   </body>
 </html>
