feat: new video with burguer menu, and video with responsively

--- a/portfolio.html
+++ b/portfolio.html
@@ -59,13 +59,13 @@
             <a href="#">Inicio</a>
           </li>
           <li class="header__nav__list__item hover-underline-animation">
-            <a href="#about">About</a>
+            <a href="index.html#about">About</a>
           </li>
           <li class="header__nav__list__item hover-underline-animation">
-            <a href="#skills">Skills</a>
+            <a href="index.html#skills">Skills</a>
           </li>
           <li class="header__nav__list__item hover-underline-animation">
-            <a href="#contact">Contacto</a>
+            <a href="index.html#contact">Contacto</a>
           </li>
           <li class="header__nav__list__item hover-underline-animation">
             <a href="#projects">Proyectos</a>
